<resources>
    <string name="app_name">AniClean</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="logOut">Log out</string>
    <string name="Home">Home</string>
    <string name="Activity">Activity</string>
    <string name="Profile">Profile</string>
    <string name="AnimeList">Anime List</string>
    <string name="MangaList">Manga List</string>
    <string name="Settings">Settings</string>
</resources>
