<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single"
        android:id="@+id/menuTop">
        <item
            android:id="@+id/nav_Home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_Activity"
            android:title="@string/Activity" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menuMiddle">
        <item   android:id="@+id/nav_Profile"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_AnimeList"
            android:title="@string/AnimeList" />
        <item
            android:id="@+id/nav_MangaList"
            android:title="@string/MangaList" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menuBot">
        <item
            android:id="@+id/nav_Settings"
            android:title="@string/Settings" />
    </group>
</menu>
